Fixed text area style. Replace AlignedLabel with Granite label

--- a/data/css/style.css
+++ b/data/css/style.css
@@ -42,3 +42,8 @@ grid.entry-grid {
 .code-label {
     font-size: 20px;
 }
+
+
+.note__text-area {
+    background: #b5b5b5;
+}
